<resources>
    <string name="app_name" translatable="false">Capítulo Justo</string>
<!--    <string name="portraitText">Portrait</string>-->
<!--    <string name="landscapeText">Landscape</string>-->
    <string name="reglas_title">Reglas</string>
    <string name="reglas_titulo"><b><font color='#F44336'>Reglas del Juego</font></b></string>

    <string name="reglas_parrafo1">
        Aparecerán viñetas de <b><font color='#F44336'>ONE PIECE</font></b>.
        Tu objetivo es <b>adivinar el capítulo exacto</b> de cada viñeta.
    </string>

    <string name="reglas_parrafo2">
Por cada capítulo que te alejes se suma <b>1 punto</b>; y si aciertas <b><font color='#F44336'>se restan 10 puntos</font></b>. Gana quien después de 10 turnos tenga menor puntuación.
    </string>

    <string name="reglas_parrafo4">
Puedes ajustar la dificultad en <b>Ajustes</b>, pero si has mantenido la configuración original, tu resultado podrá entrar en el <b><font color='#F44336'>highscore</font></b>, donde podrás comparar tu reciente puntuación con tus mejores partidas.
    </string>

    <string name="reglas_parrafo5">
Minimiza tu puntuación, acierta lo más cerca posible del capítulo correcto y <b>compite para ser el mejor</b>.
    </string>

    <!--    MainActivity  -->
    <string name="jugadores_title">Jugadores</string>
    <string name="jugadores_number_text">Indica el número de jugadores:</string>
    <string name="jugadores_name_text">Escribe el nombre de los jugadores:</string>
    <string name="j1_default">Jugador 1</string>
    <string name="j2_default">Jugador 2</string>
    <string name="j3_default">Jugador 3</string>
    <string name="j4_default">Jugador 4</string>

    <string name="ajustes_title">Ajustes</string>
    <string name="ajustes_subtitle">Filtra las viñetas que te saldrán.</string>
    <string name="ajustes_max_cap_text">Has visto del capítulo 1 al…</string>
    <string name="ajustes_max_cap_default">1000</string>
    <string name="ajustes_difficult_text">Indica la dificultad de las viñetas:</string>
    <string name="ajustes_difficult_easy">Fácil</string>
    <string name="ajustes_difficult_medium">Medio</string>
    <string name="ajustes_difficult_hard">Difícil</string>


    <!--    GameActivity  -->
    <string name="game_correct_answer">¡La viñeta es del capitulo %1$d!</string>
    <string name="game_guess_answer">¡Intenta adivinar el capítulo justo!</string>
    <string name="game_vinyeta">Viñeta %1$d/%2$d</string>
    <string name="game_guess_text">¿Qué capítulo es?</string>
    <string name="game_checkbutton_guess">COMPROBAR</string>
    <string name="game_checkbutton_next">SIGUIENTE</string>



    <!--    EndActivity  -->
    <string name="end_title">"¡Se acabó!</string>
<!--    <string name="restartButton">"Volver a jugar</string>-->
    <string name="restartButton">"Cerrar juego</string>

    <string name="end_results_title">"Resultados</string>

    <string name="end_register_title">"Registro</string>
    <string name="end_register_player_scored">%1$s puntuó %2$d</string>
    <string name="end_register_turn">Turno %1$d</string>

    <string name="end_highscore_title">"Histórico</string>



    <!--    Alertas  -->
    <string name="alert_not_panels_title">"No hay suficientes paneles</string>
    <string name="alert_not_panels_message">"que cumplan las condiciones. Vuelve a Ajustes y cámbialos.</string>
    <string name="alert_not_panels_accept">"Aceptar y cerrar</string>
    <string name="alert_close_title">"¿Salir del juego?</string>
    <string name="alert_close_message">"Perderás todo el progreso</string>
    <string name="alert_close_accept">"Sí</string>
    <string name="alert_close_dismiss">"Cancelar</string>

</resources>